--- a/01-drumKit/index.html
+++ b/01-drumKit/index.html
@@ -9,16 +9,52 @@
   </head>
   <body>
     <div class="keys">
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
-      <div><span></span></div>
+      <div data-key="65" class="key">
+        <kbd>A</kbd>
+        <span class="sound">clap</span>
+      </div>
+        <div data-key="83" class="key">
+          <kbd>S</kbd>
+          <span class="sound">hihat</span>
+        </div>
+        <div data-key="68" class="key">
+          <kbd>D</kbd>
+          <span class="sound"> kick</span>
+        </div>
+        <div data-key="70" class="key">
+          <kbd>F</kbd>
+          <span class="sound">openhat</span>
+        </div>
+        <div data-key="71" class="key">
+          <kbd>G</kbd>
+          <span class="sound">boom</span>
+        </div>
+        <div data-key="72" class="key">
+          <kbd>H</kbd>
+          <span class="sound">ride</span>
+        </div>
+        <div data-key="74" class="key">
+          <kbd>J</kbd>
+          <span class="sound">snare</span>
+        </div>
+        <div data-key="75" class="key">
+          <kbd>K</kbd>
+          <span class="sound">tom</span>
+        </div>
+        <div data-key="76" class="key">
+          <kbd>L</kbd>
+          <span class="sound">tink</span>
+        </div>
     </div>
+    <audio data-key="65" src="assets/souns/606-cymbal6.wav"></audio>
+    <audio data-key="83" src="assets/souns/606-tom1.wav"></audio>
+    <audio data-key="68" src="assets/souns/606-tom4.wav"></audio>
+    <audio data-key="70" src="assets/souns/cowbell.wav"></audio>
+    <audio data-key="71" src="assets/souns/handclap.wav"></audio>
+    <audio data-key="72" src="assets/souns/hi_conga.wav"></audio>
+    <audio data-key="74" src="assets/souns/kick1.wav"></audio>
+    <audio data-key="75" src="assets/souns/open_hh.wav"></audio>
+    <audio data-key="76" src="assets/souns/tom1.wav"></audio>
 
     <script src="main.js"></script>
   </body>
