Finalizandoo el drum-kit

--- a/01-drumKit/index.html
+++ b/01-drumKit/index.html
@@ -55,7 +55,7 @@
     <audio data-key="74" src="assets/souns/kick1.wav"></audio>
     <audio data-key="75" src="assets/souns/open_hh.wav"></audio>
     <audio data-key="76" src="assets/souns/tom1.wav"></audio>
-
+    <audio class="error" src="assets/souns/error.mp3"></audio>
     <script src="main.js"></script>
   </body>
 </html>
