--- a/05-flex-panels-image/index.html
+++ b/05-flex-panels-image/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="panels">
-        <div class="panel panel1"
+        <div class="panel panel1">
             <p>Hey</p>
             <p>Let's</p>
             <p>Dance</p>
         </div>
-        <div class="panel panel2"><p></p>
+        <div class="panel panel2">
             <p>Give</p>
             <p>Take</p>
             <p>Receive</p>
@@ -29,11 +29,13 @@
             <p>All</p>
             <p>You can</p>
         </div>
-        <div class="panel panel5"><p></p>
+        <div class="panel panel5">
             <p>Life</p>
             <p>In</p>
             <p>Motion</p>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
