--- a/08-Fun-HTML-Canvas/index.html
+++ b/08-Fun-HTML-Canvas/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <canvas id="draw" width="800" height="800"></canvas>
 
 
     <script src="index.js"></script>
