Proyecto 23: Speech en español

--- a/08-Fun-HTML-Canvas/index.html
+++ b/08-Fun-HTML-Canvas/index.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <canvas id="draw" width="800" height="800"></canvas>
-<<<<<<< HEAD
-=======
-
->>>>>>> 086f25a7256722e9ac85875e0ea242382b955da8
-
+    <canvas id="draw" class="overDraw" width="800" height="800"></canvas>
     <script src="index.js"></script>
 </body>
 </html>
